# apps/backend/src/models/user.ts
@@ -1,19 +1,0 @@
-import mongoose from 'mongoose'
-
-const userSchema = new mongoose.Schema({
-  email: {
-    type: String,
-    required: true,
-    unique: true,
-  },
-  name: {
-    type: String,
-    required: true,
-  },
-  password: {
-    type: String,
-    required: true,
-  },
-})
-
-export const User = mongoose.model('User', userSchema)
